--- a/index.html
+++ b/index.html
@@ -30,6 +30,64 @@
                 </ul>
             </address>
         </div>
+        <div class="mob-menu" id="mob-menu">
+            <button type="button" class="menu-open-btn" id="close-btn">
+                <svg class="menu-close-svg" width="8" height="8">
+                    <use href="./images/icons.svg#icon-group"></use>
+                </svg>
+            </button>
+            <nav>
+                <ul class="mob-menu-list menu-list">
+                    <li class="mob-menu-item">
+                        <a class="mob-menu-link header-studio" href="./index.html">Studio</a>
+                    </li>
+                    <li class="mob-menu-item">
+                        <a class="mob-menu-link" href="">Portfolio</a>
+                    </li>
+                    <li class="mob-menu-item">
+                        <a class="mob-menu-link" href="">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="mob-menu-contacts">
+                <div class="mobile-contacts">
+                    <ul class="menu-contacts-list">
+                        <a class="menu-contacts-address" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="menu-contacts-phone" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </ul>
+                </div>
+                <ul class="mob-media-container">
+                    <li class="mob-media-item">
+                        <a class="mob-container-icon" href="#instagram">
+                            <svg class="mediaicons" width="16" height="16">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="mob-media-item">
+                        <a class="mob-container-icon" href="#twitter">
+                            <svg class="mediaicons" width="16" height="16">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="mob-media-item">
+                        <a class="mob-container-icon" href="#facebook">
+                            <svg class="mediaicons" width="16" height="16">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="mob-media-item">
+                        <a class="mob-container-icon" href="#linkedin">
+                            <svg class="mediaicons" width="16" height="16">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </header>
 <!-- #endregion header -->
     <main>
