--- a/index.html
+++ b/index.html
@@ -13,28 +13,43 @@
 </head>
 <body>
 <!-- #region header -->
-    <header class="header">
-        <div class="container head-container">
-            <nav class="page-nav">
+<header class="header">
+    <div class="container head-container">
+        <nav class="page-nav">
+            <div class="header-logo-box">
                 <a href="./index.html" class="logo">Web<span class="logo-head">Studio</span></a>
-                <ul class="list-nav">
-                    <li class="list"><a href="./index.html" class="link active-link">Studio</a></li>
-                    <li class="list"><a href="" class="link">Portfolio</a></li>
-                    <li class="list"><a href="" class="link">Contacts</a></li>
-                </ul>
-            </nav>
-            <address class="page-address">
-                <ul class="listing-address">
-                    <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                    <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
-                </ul>
-            </address>
-        </div>
+                <div class="header-button">
+                    <button type="button" class="header-button-mob">
+                        <svg class="mob" width="24" height="24">
+                            <use href="./images/icons.svg#icon-mob"></use>
+                        </svg>
+                    </button>
+                </div>
+            </div> 
+            <div class="header-btns"> 
+                <button type="button" class="header-btns-mob" id="toggleButton">
+                    <svg class="" width="24" height="24">
+                        <use href="./images/icons.svg#icon-menu"></use>
+                    </svg>
+                </button>
+              </div>
+            <ul class="list-nav header-list-nav">
+                <li class="list"><a href="./index.html" class="link active-link">Studio</a></li>
+                <li class="list"><a href="" class="link">Portfolio</a></li>
+                <li class="list"><a href="" class="link">Contacts</a></li>
+            </ul>
+        </nav>
+        <address class="page-address">
+            <ul class="listing-address">
+                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
+            </ul>
+        </address>
         <div class="mob-menu" id="mob-menu">
             <button type="button" class="menu-open-btn" id="close-btn">
-                <svg class="menu-close-svg" width="8" height="8">
-                    <use href="./images/icons.svg#icon-group"></use>
-                </svg>
+              <svg class="menu-close-svg" width="8" height="8">
+                <use href="./images/icons.svg#icon-close"></use>
+              </svg>
             </button>
             <nav>
                 <ul class="mob-menu-list menu-list">
@@ -49,20 +64,20 @@
                     </li>
                 </ul>
             </nav>
-            <div class="mob-menu-contacts">
-                <div class="mobile-contacts">
-                    <ul class="menu-contacts-list">
-                        <a class="menu-contacts-address" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                        <a class="menu-contacts-phone" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                    </ul>
-                </div>
-                <ul class="mob-media-container">
-                    <li class="mob-media-item">
-                        <a class="mob-container-icon" href="#instagram">
-                            <svg class="mediaicons" width="16" height="16">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
+                <div class="mob-menu-contacts">
+                    <div class="mobile-contacts">
+                        <ul class="menu-contacts-list">
+                            <li><a class="menu-contacts-address" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                            <li><a class="menu-contacts-phone" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                        </ul>
+                    </div>
+                    <ul class="mob-media-container">
+                        <li class="mob-media-item">
+                            <a class="mob-container-icon" href="#instagram">
+                                <svg class="mediaicons" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
                     </li>
                     <li class="mob-media-item">
                         <a class="mob-container-icon" href="#twitter">
@@ -88,7 +103,8 @@
                 </ul>
             </div>
         </div>
-    </header>
+    </div>
+</header>
 <!-- #endregion header -->
     <main>
 <!-- #region solutions -->
@@ -101,7 +117,7 @@
 <!-- #endregion solutions -->
 <!-- #region advantages -->
         <section class="sec-advantages">
-            <div class="container">
+            <div class="container container-about">
                 <h2 class="visually-hidden">advantages</h2>
                 <ul class="club-list">
                     <li class="list">
