--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                     </button>
                 </div>
             </div> 
-            <div class="header-btns"> 
-                <button type="button" class="header-btns-mob" id="toggleButton">
+            <div class="header-button"> 
+                <button type="button" class="header-button-mob" id="toggleButton">
                     <svg class="" width="24" height="24">
-                        <use href="./images/icons.svg#icon-menu"></use>
+                        <use href="./images/icons.svg#icon-close"></use>
                     </svg>
                 </button>
               </div>
@@ -45,58 +45,58 @@
                 <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
-        <div class="mob-menu" id="mob-menu">
-            <button type="button" class="menu-open-btn" id="close-btn">
-              <svg class="menu-close-svg" width="8" height="8">
+        <div class="mob-menu is-open-mob" id="mob-menu">
+            <button type="button" class="menu-open-button" id="close-button">
+              <svg class="menu-close-icon" width="8" height="8">
                 <use href="./images/icons.svg#icon-close"></use>
               </svg>
             </button>
-            <nav>
-                <ul class="mob-menu-list menu-list">
+            <nav class="mob-nav">
+                <ul class="mob-menu-list">
                     <li class="mob-menu-item">
-                        <a class="mob-menu-link header-studio" href="./index.html">Studio</a>
+                        <a class="mob-link header-studio" href="./index.html">Studio</a>
                     </li>
                     <li class="mob-menu-item">
-                        <a class="mob-menu-link" href="">Portfolio</a>
+                        <a class="mob-link" href="">Portfolio</a>
                     </li>
                     <li class="mob-menu-item">
-                        <a class="mob-menu-link" href="">Contacts</a>
+                        <a class="mob-link" href="">Contacts</a>
                     </li>
                 </ul>
             </nav>
-                <div class="mob-menu-contacts">
+                <div class="mob-address">
                     <div class="mobile-contacts">
-                        <ul class="menu-contacts-list">
-                            <li><a class="menu-contacts-address" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                            <li><a class="menu-contacts-phone" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                        <ul class="mob-address-list">
+                            <li><a class="mob-address" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                            <li><a class="mob-phone" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                         </ul>
                     </div>
-                    <ul class="mob-media-container">
+                    <ul class="mob-media">
                         <li class="mob-media-item">
-                            <a class="mob-container-icon" href="#instagram">
-                                <svg class="mediaicons" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-instagram"></use>
+                            <a class="mob-icon-link" href="#instagram">
+                                <svg class="mob-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-instagram-foot"></use>
                                 </svg>
                             </a>
                     </li>
                     <li class="mob-media-item">
-                        <a class="mob-container-icon" href="#twitter">
-                            <svg class="mediaicons" width="16" height="16">
-                                <use href="./images/icons.svg#icon-twitter"></use>
+                        <a class="mob-icon-link" href="#twitter">
+                            <svg class="mob-icon" width="16" height="16">
+                                <use href="./images/icons.svg#icon-twitter-foot"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="mob-media-item">
-                        <a class="mob-container-icon" href="#facebook">
-                            <svg class="mediaicons" width="16" height="16">
-                                <use href="./images/icons.svg#icon-facebook"></use>
+                        <a class="mob-icon-link" href="#facebook">
+                            <svg class="mob-icon" width="16" height="16">
+                                <use href="./images/icons.svg#icon-facebook-foot"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="mob-media-item">
-                        <a class="mob-container-icon" href="#linkedin">
-                            <svg class="mediaicons" width="16" height="16">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
+                        <a class="mob-icon-link" href="#linkedin">
+                            <svg class="mob-icon" width="16" height="16">
+                                <use href="./images/icons.svg#icon-linkedin-foot"></use>
                             </svg>
                         </a>
                     </li>
