--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
-        <div class="mob-menu is-open-mob" id="mob-menu">
+        <div class="mob-menu is-open" id="mob-menu">
             <button type="button" class="menu-open-button" id="close-button">
               <svg class="menu-close-icon" width="8" height="8">
                 <use href="./images/icons.svg#icon-close"></use>
@@ -47,49 +47,49 @@
             <nav class="mob-nav">
                 <ul class="mob-menu-list">
                     <li class="mob-menu-item">
-                        <a class="mob-link header-studio" href="./index.html">Studio</a>
+                        <a class="mob-link active-link" href="./index.html">Studio</a>
                     </li>
                     <li class="mob-menu-item">
-                        <a class="mob-link" href="">Portfolio</a>
+                        <a class="mob-link" href="#">Portfolio</a>
                     </li>
                     <li class="mob-menu-item">
-                        <a class="mob-link" href="">Contacts</a>
+                        <a class="mob-link" href="#">Contacts</a>
                     </li>
                 </ul>
             </nav>
-                <div class="mob-address">
+                <div class="con-mob-contacts">
                     <div class="mobile-contacts">
                         <ul class="mob-address-list">
-                            <li><a class="mob-address" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                             <li><a class="mob-phone" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                            <li><a class="mob-address" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                         </ul>
                     </div>
                     <ul class="mob-media">
                         <li class="mob-media-item">
                             <a class="mob-icon-link" href="#instagram">
-                                <svg class="mob-icon" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-instagram-foot"></use>
+                                <svg class="mob-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-instagram-h"></use>
                                 </svg>
                             </a>
                     </li>
                     <li class="mob-media-item">
                         <a class="mob-icon-link" href="#twitter">
-                            <svg class="mob-icon" width="16" height="16">
-                                <use href="./images/icons.svg#icon-twitter-foot"></use>
+                            <svg class="mob-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter-h"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="mob-media-item">
                         <a class="mob-icon-link" href="#facebook">
-                            <svg class="mob-icon" width="16" height="16">
-                                <use href="./images/icons.svg#icon-facebook-foot"></use>
+                            <svg class="mob-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook-h"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="mob-media-item">
                         <a class="mob-icon-link" href="#linkedin">
-                            <svg class="mob-icon" width="16" height="16">
-                                <use href="./images/icons.svg#icon-linkedin-foot"></use>
+                            <svg class="mob-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin-h"></use>
                             </svg>
                         </a>
                     </li>
@@ -159,7 +159,7 @@
                 <h2 class="sec-title">Our Team</h2>
                 <ul class="page-listing">
                     <li class="list">
-                        <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" height="260" class="images-our-team">
+                        <img srcset="./images/mark-guerrero-x1.jpg x1, ./images/mark-guerrero-x2.jpg x2" src="./images/mark-guerrero-x1.jpg" alt="Mark Guerrero" width="264" height="260" class="images-our-team">
                         <div class="name">
                             <h3 class="title">Mark Guerrero</h3>
                             <p class="text-list">Product Designer</p>
@@ -196,7 +196,7 @@
                         </div>
                     </li>
                     <li class="list">
-                        <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" height="260" class="images-our-team">
+                        <img srcset="./images/tom-ford-x1.jpg x1, ./images/tom-ford-x2.jpg x2" src="./images/tom-ford-x1.jpg" alt="Tom Ford" width="264" height="260" class="images-our-team">
                         <div class="name">
                             <h3 class="title">Tom Ford</h3>
                             <p class="text-list">Frontend Developer</p>
@@ -233,7 +233,7 @@
                         </div>
                     </li>
                     <li class="list">
-                        <img src="./images/camila-garcia.jpg" alt="Camila Garcia" width="264" height="260" class="images-our-team">
+                        <img srcset="./images/camila-garcia-x1.jpg x1, ./images/camila-garcia-x2.jpg x2" src="./images/camila-garcia-x1.jpg" alt="Camila Garcia" width="264" height="260" class="images-our-team">
                         <div class="name">
                             <h3 class="title">Camila Garcia</h3>
                             <p class="text-list">Marketing</p>
@@ -270,7 +270,7 @@
                         </div>
                     </li>
                     <li class="list">
-                        <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264" height="260" class="images-our-team">
+                        <img srcset="./images/daniel-wilson-x1.jpg 1x, ./images/daniel-wilson-x2.jpg 2x," src="./images/daniel-wilson-x1.jpg" alt="Daniel Wilson" width="264" height="260" class="images-our-team">
                         <div class="name">
                             <h3 class="title">Daniel Wilson</h3>
                             <p class="text-list">UI Designer</p>
@@ -317,7 +317,33 @@
                 <ul class="club-list">
                     <li class="page-list">
                         <div class="ovrlay">
-                            <img src="./images/bank-app.jpg" alt="Bank App" width="360" height="300">
+                            <picture>
+                                <source
+                                    srcset="
+                                    ./images/images-desktop/bank-app-x1.jpg 1x,
+                                    ./images/images-desktop/bank-app-x1.jpg 2x
+                                    "
+                                    media="(min-width: 1158px)"
+                                />
+                                <source
+                                    srcset="
+                                    ./images/images-table/bank-app-x1.jpg 1x,
+                                    ./images/images-table/bank-app-x1.jpg 2x
+                                    "
+                                    media="(min-width: 768px)"
+                                />
+                                <source
+                                    srcset="
+                                    ./images/images-mobile/bank-app-x1.jpg 1x,
+                                    ./images/images-mobile/bank-app-x1.jpg 2x
+                                    "
+                                />
+                                <img
+                                    src="./images/images-desktop/bank-app-x1.jpg"
+                                    class="images-portfolio"
+                                    alt="Scan QR code"
+                                />
+                            </picture>
                                 <p class="text-ovrlay">
                                     - 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -329,7 +355,33 @@
                     </li>
                     <li class="page-list">
                         <div class="ovrlay">
-                            <img src="./images/scan-qr-code.jpg" alt="Scan QR code" width="360" height="300">
+                            <picture>
+                                <source
+                                    srcset="
+                                    ./images/images-desktop/scan-qr-code-x1.jpg 1x,
+                                    ./images/images-desktop/scan-qr-code-x1.jpg 2x
+                                    "
+                                    media="(min-width: 1158px)"
+                                />
+                                <source
+                                    srcset="
+                                    ./images/images-table/scan-qr-code-x1.jpg 1x,
+                                    ./images/images-table/scan-qr-code-x1.jpg 2x
+                                    "
+                                    media="(min-width: 768px)"
+                                />
+                                <source
+                                    srcset="
+                                    ./images/images-mobile/scan-qr-code-x1.jpg 1x,
+                                    ./images/images-mobile/scan-qr-code-x1.jpg
+                                    "
+                                />
+                                <img
+                                    src="./images/images-desktop/scan-qr-code-x1.jpg"
+                                    class="images-portfolio"
+                                    alt="Scan QR code"
+                                />
+                            </picture>
                             <p class="text-ovrlay">
                                 - 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                             </p>
@@ -341,7 +393,33 @@
                     </li>
                     <li class="page-list">
                         <div class="ovrlay">
-                            <img src="./images/laptop-and-phone.jpg" alt="laptop and phone" width="360" height="300">
+                            <picture>
+                                <source
+                                    srcset="
+                                    ./images/images-desktop/laptop-and-phone-x1.jpg 1x,
+                                    ./images/images-desktop/laptop-and-phone-x2.jpg 2x
+                                    "
+                                    media="(min-width: 1158px)"
+                                />
+                                <source
+                                    srcset="
+                                    ./images/images-table/laptop-and-phone-x1.jpg 1x,
+                                    ./images/images-table/laptop-and-phone-x2.jpg 2x
+                                    "
+                                    media="(min-width: 768px)"
+                                />
+                                <source
+                                    srcset="
+                                    ./images/images-mobile/laptop-and-phone-x1.jpg 1x,
+                                    ./images/images-mobile/laptop-and-phone-x2.jpg 2x
+                                    "
+                                />
+                                <img
+                                    src="./images/images-desktop/laptop-and-phone-x1.jpg"
+                                    class="images-portfolio"
+                                    alt="Laptop and phone"
+                                />
+                            </picture>
                             <p class="text-ovrlay">
                                 - 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                             </p>
@@ -353,7 +431,33 @@
                     </li>
                     <li class="page-list">
                         <div class="ovrlay">
-                            <img src="./images/driver-in-the-car.jpg" alt="Driver in the car" width="360" height="300">
+                            <picture>
+                                <source
+                                    srcset="
+                                    ./images/images-desktop/driver-in-the-car-x1.jpg 1x,
+                                    ./images/images-desktop/driver-in-the-car-x2.jpg 2x
+                                    "
+                                    media="(min-width: 1158px)"
+                                />
+                                <source
+                                    srcset="
+                                    ./images/images-table/driver-in-the-car-x1.jpg 1x,
+                                    ./images/images-table/driver-in-the-car-x2.jpg 2x
+                                    "
+                                    media="(min-width: 768px)"
+                                />
+                                <source
+                                    srcset="
+                                    ./images/images-mobile/driver-in-the-car-x1.jpg 1x,
+                                    ./images/images-mobile/driver-in-the-car-x2.jpg 2x
+                                    "
+                                />
+                                <img
+                                    src="./images/images-desktop/driver-in-the-car-x1.jpg"
+                                    class="images-portfolio"
+                                    alt="driver in the car"
+                                />
+                            </picture>
                             <p class="text-ovrlay">
                                 - 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                             </p>
@@ -365,7 +469,33 @@
                     </li>
                     <li class="page-list">
                         <div class="ovrlay">
-                            <img src="./images/phone-wallpaper.jpg" alt="Phone wallpaper" width="360" height="300">
+                            <picture>
+                                <source
+                                    srcset="
+                                    ./images/images-desktop/phone-wallpaper-x1.jpg 1x,
+                                    ./images/images-desktop/phone-wallpaper-x2.jpg 2x
+                                    "
+                                    media="(min-width: 1158px)"
+                                />
+                                <source
+                                    srcset="
+                                    ./images/images-table/phone-wallpaper-x1.jpg 1x,
+                                    ./images/images-table/phone-wallpaper-x2.jpg 2x
+                                    "
+                                    media="(min-width: 768px)"
+                                />
+                                <source
+                                    srcset="
+                                    ./images/images-mobile/phone-wallpaper-x1.jpg 1x,
+                                    ./images/images-mobile/phone-wallpaper-x2.jpg 2x
+                                    "
+                                />
+                                <img
+                                    src="./images/images-desktop/phone-wallpaper-x1.jpg"
+                                    class="images-portfolio"
+                                    alt="Laptop and phone"
+                                />
+                            </picture>
                             <p class="text-ovrlay">
                                 - 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                             </p>
@@ -377,7 +507,33 @@
                     </li>
                     <li class="page-list">
                         <div class="ovrlay">
-                            <img src="./images/girl.jpg" alt="Girl listens and looks at phone" width="360" height="300">
+                            <picture>
+                                <source
+                                    srcset="
+                                    ./images/images-desktop/girl-x1.jpg 1x,
+                                    ./images/images-desktop/girl-x2.jpg 2x
+                                    "
+                                    media="(min-width: 1158px)"
+                                />
+                                <source
+                                    srcset="
+                                    ./images/images-table/girl-x1.jpg 1x,
+                                    ./images/images-table/girl-x2.jpg 2x
+                                    "
+                                    media="(min-width: 768px)"
+                                />
+                                <source
+                                    srcset="
+                                    ./images/images-mobile/girl-x1.jpg 1x,
+                                    ./images/images-mobile/girl-x2.jpg 2x
+                                    "
+                                />
+                                <img
+                                    src="./images/images-desktop/girl-x1.jpg"
+                                    class="images-portfolio"
+                                    alt="Laptop and phone"
+                                />
+                            </picture>
                             <p class="text-ovrlay">
                                 - 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                             </p>
@@ -455,7 +611,7 @@
     </footer>
 <!-- #endregion footer -->
     <div class="backdrop is-open" id="backdrop-menu">
-        <div class="modal ">
+        <div class="modal">
             <button type="button" class="modal-close-button" id="close-modal-button">
                 <svg class="modal-close-icon" width="8" height="8">
                     <use href="./images/icons.svg#icon-close"></use>
